Add posts do banner

--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -148,8 +148,9 @@ banner {
             display: none;
             background-color: rgba(0, 0, 0, 0.76);
             color:white;
+            padding: 6px;
 
-            h1, h2 {font-size: 16px;}
+            small {display:block;}
          }                      
       }
 
