--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -156,10 +156,10 @@ banner .wrapper .post resume {
   display: none;
   background-color: rgba(0, 0, 0, 0.76);
   color: white;
+  padding: 6px;
 }
-banner .wrapper .post resume h1,
-banner .wrapper .post resume h2 {
-  font-size: 16px;
+banner .wrapper .post resume small {
+  display: block;
 }
 banner .wrapper .post:hover {
   width: 270px;
