--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -140,7 +140,7 @@ banner {
          margin-right: 3px;
          cursor:pointer;  
          background-size: cover;
-         .transition(background-position, 2000ms);  
+         .transition(width, 1000ms);  
 
          resume{
             position: absolute;
