--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -143,6 +143,12 @@ banner .wrapper .post {
   cursor: pointer;
   background-size: cover;
   position: relative;
+  -moz-opacity: 0.88;
+  -khtml-opacity: 0.88;
+  -webkit-opacity: 0.88;
+  opacity: 0.88;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=88);
+  filter: alpha(opacity=88);
   transition: width 500ms ease;
   -moz-transition: width 500ms ease;
   -webkit-transition: width 500ms ease;
@@ -162,7 +168,7 @@ banner .wrapper .post resume {
   filter: alpha(opacity=0);
   background-color: rgba(0, 0, 0, 0.76);
   color: white;
-  padding: 6px;
+  padding: 5px;
   transition: opacity 1000ms ease;
   -moz-transition: opacity 1000ms ease;
   -webkit-transition: opacity 1000ms ease;
@@ -176,6 +182,12 @@ banner .wrapper .post resume small {
 }
 banner .wrapper .post:hover {
   width: 590px;
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
 }
 banner .wrapper .post:hover resume {
   -moz-opacity: 1;
@@ -184,6 +196,7 @@ banner .wrapper .post:hover resume {
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
   filter: alpha(opacity=100);
+  width: 580px;
 }
 banner h1 {
   text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
