--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -42,8 +42,8 @@ footer {
 }
 header {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.88);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.73);
+  border-bottom: 1px solid white;
   /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
   padding: 4px 0px;
   z-index: 1000;
@@ -143,12 +143,12 @@ banner .wrapper .post {
   cursor: pointer;
   background-size: cover;
   position: relative;
-  -moz-opacity: 0.88;
-  -khtml-opacity: 0.88;
-  -webkit-opacity: 0.88;
-  opacity: 0.88;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=88);
-  filter: alpha(opacity=88);
+  -moz-opacity: 0.73;
+  -khtml-opacity: 0.73;
+  -webkit-opacity: 0.73;
+  opacity: 0.73;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=73);
+  filter: alpha(opacity=73);
   transition: width 500ms ease;
   -moz-transition: width 500ms ease;
   -webkit-transition: width 500ms ease;
