--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -30,8 +30,6 @@
                         <li>
                             <a href="/artigos" {%if page.categories contains 'artigos'%}class="selected" {%endif%} title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
                         </li>
-                    </ul>
-                    <ul>
                         <li>
                             <a href="/palestras" {%if page.categories contains 'palestras'%}class="selected" {%endif%}
                             title="Eventos em que participei palestrando.">PALESTRAS</a>
@@ -52,25 +50,13 @@
         <banner {% if page.categories %} class="{{page.categories}}" {% endif %}>
             <!-- <a href="javascript:;" class="arrow-right"></a>   <a href="javascript:;" class="arrow-left"></a>   -->
             <div class="wrapper">
-                <div class="resume" title="Aprenda como funciona" excerpt="Desenvolver Software é a arte de cultivar a informação de forma que ela cresça naturalmente através de mãos distintas.">
+                <div class="excerpt">
                     <h1>Aprenda como funciona
                     </h1>
                     <h2>Desenvolver Software é a arte de cultivar a informação de forma que ela cresça naturalmente
                         através de mãos distintas.
                     </h2>
                 </div>
-
-                {% for post in site.posts limit:3 %}
-                    {% if post.published %}
-                        <div class="post" style="background-image: url({{ post.image }});" href="{{ post.url }}"> 
-                            <resume>
-                                <b>{{ post.title | xml_escape }}</b>
-                                <small>{{ post.excerpt }}</small>
-                            </resume>                           
-                        </div>
-                    {% endif %}
-                {% endfor %}
-                
             </div>
         </banner>
         <section>
@@ -170,8 +156,6 @@
         it.MostRecentVideo = ko.observable({id:''});
         it.Videos= ko.observableArray([]);
 
-
-
         it.Initialize= function() {
 
             // ICONES            
@@ -197,15 +181,6 @@
                                 it.Videos.push(item.video);
                             }
                         
-            });
-
-            var resume = $("banner .resume"); 
-            $("banner .post").hover(function(e){                               
-                resume.find("h1").text($(this).attr("title"));
-                resume.find("h2").text($(this).attr("excerpt"));
-            }, function(){
-                resume.find("h1").text(resume.attr("title"));
-                resume.find("h2").text(resume.attr("excerpt"));
             });
 
 
@@ -282,149 +257,81 @@
     < h2 class = "post_title" > {. {
             page.title
         }
-    } < /h2>
-
-    <ul>
-
- 
-
- <li class="archive_list">
-
- 
-
- <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
-
- 
-
- 
-
+    } < /h2>
+    <ul>
+ 
+ <li class="archive_list">
+ 
+ <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/ % d / % y "}}</time>
+ 
+ 
     <a class="
-    archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
-
- 
-
- 
-
+    archive_list_article_link " href='{.{post.url}}'>{.{post.title}}</a>
+ 
+ 
     <p class="
-    summary ">
-
-                    
-
- <span>{.{post.summary}}</span>
-
- 
-
- 
-
+    summary ">
+                    
+ <span>{.{post.summary}}</span>
+ 
+ 
     <ul class="
-    tag_list ">
-
- 
-
-    {.% for tag in post.tags %}
-
- 
-
+    tag_list ">
+ 
+    {.% for tag in post.tags %}
+ 
     <li class="
-    inline archive_list ">
-
- 
-
+    inline archive_list ">
+ 
  <a class="
     tag_list_link " href=" / tag / {. {
             tag
         }
     }
-    ">{.{ tag }}</a>
-
- 
-
-
-
-    </li>
-
-
-
-     {.%endfor%}
-
- 
-
-    </ul>
-
- 
-
- 
-
-    </p>
-
- 
-
- 
-
-    </li>
-
- 
-
-
-
-    </ul>
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
+    ">{.{ tag }}</a>
+ 
+
+    </li>
+
+     {.%endfor%}
+ 
+    </ul>
+ 
+ 
+    </p>
+ 
+ 
+    </li>
+ 
+
+    </ul>
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
+
+
+
+
+
+
+ 
 </script>
