--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -42,8 +42,8 @@ footer {
 }
 header {
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.73);
-  border-bottom: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.65);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
   /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
   padding: 4px 0px;
   z-index: 1000;
@@ -68,14 +68,12 @@ header #google_translate_element {
 }
 header menu {
   float: right;
-  margin: 0px 280px 0px 0px;
+  margin: 0px;
 }
 header menu ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
-  display: table-row;
-  width: 100%;
   /* background: #eee;
          background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
@@ -90,12 +88,11 @@ header menu ul {
 
 }
 header menu ul li {
-  padding: 5px 10px;
+  padding: 0px 10px;
   display: table-cell;
-  /*border-right:1px solid #d2d2d2;
-            height:70px;
-            vertical-align: middle;*/
-
+  /*border-right:1px solid #d2d2d2;*/
+  height: 70px;
+  vertical-align: middle;
   /*a:hover, a.selected{                    
                text-decoration: none;
                border-top: 1px solid @primaryColorHover;               
@@ -114,6 +111,7 @@ header menu ul li a {
 banner {
   position: relative;
   z-index: 1;
+  padding-top: 70px;
   display: block;
   height: 330px;
   background: url(../img/banner/nurture_seedling_in_hands_low_level.jpg);
@@ -123,80 +121,12 @@ banner {
   vertical-align: bottom;
 }
 banner .wrapper {
-  position: relative;
-  height: 100%;
-  /*bottom: 0px;
-      left: 50%;
-      margin-left: -430px;  .wrapper original width is 860px, then 50% is 430px */
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  margin-left: -430px;
+  /* .wrapper original width is 860px, then 50% is 430px */
 
-}
-banner .wrapper .resume {
-  bottom: 0px;
-  position: absolute;
-  float: left;
-}
-banner .wrapper .post {
-  width: 80px;
-  height: 100%;
-  float: right;
-  margin-right: 3px;
-  cursor: pointer;
-  background-size: cover;
-  position: relative;
-  -moz-opacity: 0.73;
-  -khtml-opacity: 0.73;
-  -webkit-opacity: 0.73;
-  opacity: 0.73;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=73);
-  filter: alpha(opacity=73);
-  transition: width 500ms ease;
-  -moz-transition: width 500ms ease;
-  -webkit-transition: width 500ms ease;
-  -o-transition: width 500ms ease;
-  -webkit-transition: all width 500ms;
-  -moz-transition: all width 500ms;
-  transition: all width 500ms;
-}
-banner .wrapper .post resume {
-  position: absolute;
-  bottom: 0px;
-  -moz-opacity: 0;
-  -khtml-opacity: 0;
-  -webkit-opacity: 0;
-  opacity: 0;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
-  filter: alpha(opacity=0);
-  background-color: rgba(0, 0, 0, 0.76);
-  color: white;
-  padding: 5px;
-  transition: opacity 1000ms ease;
-  -moz-transition: opacity 1000ms ease;
-  -webkit-transition: opacity 1000ms ease;
-  -o-transition: opacity 1000ms ease;
-  -webkit-transition: all opacity 1000ms;
-  -moz-transition: all opacity 1000ms;
-  transition: all opacity 1000ms;
-}
-banner .wrapper .post resume small {
-  display: block;
-}
-banner .wrapper .post:hover {
-  width: 590px;
-  -moz-opacity: 1;
-  -khtml-opacity: 1;
-  -webkit-opacity: 1;
-  opacity: 1;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-  filter: alpha(opacity=100);
-}
-banner .wrapper .post:hover resume {
-  -moz-opacity: 1;
-  -khtml-opacity: 1;
-  -webkit-opacity: 1;
-  opacity: 1;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-  filter: alpha(opacity=100);
-  width: 580px;
 }
 banner h1 {
   text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
