versão com jekyll local

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -21,25 +21,25 @@
                 <menu>
                     <ul>
                         <li>
-                            <a href="/quem-e-sidney" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%}
+                            <a href="/quem-e-sidney.html" {%if page.categories contains 'quem-e-sidney'%}class="selected" {%endif%}
                             title="Um pequeno resumo de quem eu sou e porque você deveria acompanhar essa história.">QUEM É SIDNEY</a>
                         </li>
                         <li>
-                            <a href="/leituras" {%if page.categories contains 'leituras'%}class="selected" {%endif%} title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
+                            <a href="/leituras.html" {%if page.categories contains 'leituras'%}class="selected" {%endif%} title="Veja aqui quais livros estão formando minhas idéias e de que fonte minha mente está bebendo.">LEITURAS</a>
                         </li>
                         <li>
-                            <a href="/artigos" {%if page.categories contains 'artigos'%}class="selected" {%endif%} title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
+                            <a href="/artigos.html" {%if page.categories contains 'artigos'%}class="selected" {%endif%} title="Os sites que já publicaram conteúdo de minha autoria.">ARTIGOS</a>
                         </li>
                         <li>
-                            <a href="/palestras" {%if page.categories contains 'palestras'%}class="selected" {%endif%}
+                            <a href="/palestras.html" {%if page.categories contains 'palestras'%}class="selected" {%endif%}
                             title="Eventos em que participei palestrando.">PALESTRAS</a>
                         </li>
                         <li>
-                            <a href="/life-list" {%if page.categories contains 'life-list'%}class="selected" {%endif%}
+                            <a href="/life-list.html" {%if page.categories contains 'life-list'%}class="selected" {%endif%}
                             title="Uma lista de coisas que acho imprescindível realizar antes de morrer.">LIFE LIST</a>
                         </li>
                         <li>
-                            <a href="/contato" {%if page.categories contains 'contato'%}class="selected" {%endif%} title="O canal mais rápido para falar comigo depois do telefone.">CONTATO</a>
+                            <a href="/contato.html" {%if page.categories contains 'contato'%}class="selected" {%endif%} title="O canal mais rápido para falar comigo depois do telefone.">CONTATO</a>
                         </li>
                     </ul>
                 </menu>
