--- a/themes/default/css/all.css
+++ b/themes/default/css/all.css
@@ -28,6 +28,34 @@
   font-family: "HelveticaNeueBdCn";
   src: url('../fonts/HelveticaNeueLTCom-BdCn.ttf') format('truetype'), url('../fonts/HelveticaNeueLTCom-BdCn.woff') format('woff');
 }
+@font-face {
+  font-family: 'SourceSansPro';
+  src: url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.eot');
+  src: url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-ExtraLight-webfont.svg#SourceSansProExtraLight') format('../fonts/source-sans-pro/Svg');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SourceSansPro';
+  src: url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.eot');
+  src: url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-Regular-webfont.svg#SourceSansProRegular') format('../fonts/source-sans-pro/Svg');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SourceSansPro';
+  src: url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.eot');
+  src: url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-Semibold-webfont.svg#SourceSansProSemibold') format('../fonts/source-sans-pro/Svg');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SourceSansPro';
+  src: url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.eot');
+  src: url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.woff') format('woff'), url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.ttf') format('truetype'), url('../fonts/source-sans-pro/SourceSansPro-Bold-webfont.svg#SourceSansProBold') format('../fonts/source-sans-pro/Svg');
+  font-weight: 500;
+  font-style: normal;
+}
 /* -------------------------------- */
 
 /* Structure                        */
@@ -178,16 +206,130 @@ banner .arrow-right {
 }
 section {
   background: url(../img/corner-shadow-top-left.png) white no-repeat top left;
-  overflow: auto;
-  /* fix bug background-color dont work */
+  /* overflow:auto; fix bug background-color dont work */
 
 }
 section .super {
   background: url(../img/corner-shadow-top-right.png) no-repeat top right;
-  overflow: auto;
-  /* fix bug background-color dont work */
+  /*overflow:auto; fix bug background-color dont work */
   width: 100%;
   padding-top: 24px;
+}
+section .post-wall .widget {
+  border: 1px solid #e5e5e5;
+  background-color: white;
+  position: relative;
+  width: 260px;
+  float: left;
+  height: 260px;
+  margin: 0px 24px 24px 0px;
+  background-position: 0% 0%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: background-position 2000ms ease;
+  -moz-transition: background-position 2000ms ease;
+  -webkit-transition: background-position 2000ms ease;
+  -o-transition: background-position 2000ms ease;
+  -webkit-transition: all background-position 2000ms;
+  -moz-transition: all background-position 2000ms;
+  transition: all background-position 2000ms;
+}
+section .post-wall .widget:hover {
+  background-position: 100% 100%;
+}
+section .post-wall .widget::after {
+  content: '';
+  position: absolute;
+  height: 7px;
+  bottom: -7px;
+  left: 0;
+  background: url(../img/shadow2.png) no-repeat top center;
+  width: 100%;
+}
+section .post-wall a {
+  display: block;
+  position: relative;
+  text-decoration: none;
+  height: 100%;
+  background: none;
+  transition: opacity 400ms ease;
+  -moz-transition: opacity 400ms ease;
+  -webkit-transition: opacity 400ms ease;
+  -o-transition: opacity 400ms ease;
+  -webkit-transition: all opacity 400ms;
+  -moz-transition: all opacity 400ms;
+  transition: all opacity 400ms;
+}
+section .post-wall a small {
+  display: block;
+}
+section .post-wall a resume {
+  display: block;
+  background-color: rgba(0, 0, 0, 0.76);
+  color: white;
+  bottom: 0px;
+  padding: 5px;
+  position: absolute;
+  width: 250px;
+}
+section .post-wall .twitter table {
+  height: 100%;
+}
+section .post-wall a.button {
+  display: table-cell;
+  width: 36px;
+  height: 36px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-image: none;
+  position: absolute;
+  top: -18px;
+  left: 45%;
+  -moz-opacity: 0.4;
+  -khtml-opacity: 0.4;
+  -webkit-opacity: 0.4;
+  opacity: 0.4;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40);
+  filter: alpha(opacity=40);
+}
+section .post-wall a.button:hover,
+section .post-wall a.button:active {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+}
+section .post-wall a.twitter {
+  background-image: url(../img/twitter.png);
+}
+section .post-wall a.facebook {
+  background-image: url(../img/facebook.png);
+}
+section .post-wall a.linkedin {
+  background-image: url(../img/linkedin.png);
+}
+section .post-wall a.feed {
+  background-image: url(../img/feed.png);
+}
+section .post-wall a.slideshare {
+  background-image: url(../img/slideshare.png);
+}
+section .post-wall a.github {
+  background-image: url(../img/github.png);
+}
+section .post-wall a.youtube {
+  background-image: url(../img/youtube.png);
+}
+section .post-wall a.delicious {
+  background-image: url(../img/delicious.png);
+}
+section .post-wall a.mail {
+  background-image: url(../img/mail.png);
+}
+section nav {
+  float: right;
 }
 section .left-side {
   width: 586px;
@@ -200,55 +342,6 @@ section .left-side h1 {
 }
 section .left-side .post-wall ul {
   padding: 0px;
-}
-section .left-side .post-wall ul li {
-  display: inline-block;
-  width: 270px;
-  height: 270px;
-  margin: 0px 18px 18px 0px;
-  border: 1px solid black;
-  position: relative;
-  background-position: 0% 0%;
-  background-repeat: no-repeat;
-  transition: background-position 2000ms ease;
-  -moz-transition: background-position 2000ms ease;
-  -webkit-transition: background-position 2000ms ease;
-  -o-transition: background-position 2000ms ease;
-  -webkit-transition: all background-position 2000ms;
-  -moz-transition: all background-position 2000ms;
-  transition: all background-position 2000ms;
-}
-section .left-side .post-wall ul li a {
-  display: block;
-  position: relative;
-  text-decoration: none;
-  opacity: 0;
-  height: 100%;
-  background: none;
-  transition: opacity 400ms ease;
-  -moz-transition: opacity 400ms ease;
-  -webkit-transition: opacity 400ms ease;
-  -o-transition: opacity 400ms ease;
-  -webkit-transition: all opacity 400ms;
-  -moz-transition: all opacity 400ms;
-  transition: all opacity 400ms;
-}
-section .left-side .post-wall ul li a small {
-  display: block;
-}
-section .left-side .post-wall ul li a resume {
-  display: block;
-  background-color: rgba(0, 0, 0, 0.76);
-  color: white;
-  bottom: 0px;
-  padding: 5px;
-  position: absolute;
-}
-section .left-side .post-wall ul li:hover {
-  background-position: 100% 100%;
-}
-section .left-side .post-wall ul li:hover a {
-  opacity: 1;
 }
 section .left-side .artigos ul,
 section .left-side .palestras ul {
@@ -277,87 +370,6 @@ section .right-side {
   /* fix bug height or boxing dont work */
 
 }
-section .right-side .widget {
-  border: 1px solid #e5e5e5;
-  background-color: white;
-  position: relative;
-  margin-bottom: 30px;
-}
-section .right-side .widget .gravatar {
-  display: block;
-  padding: 4px;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: justify;
-}
-section .right-side .widget .gravatar img {
-  float: left;
-  margin-right: 4px;
-}
-section .right-side .widget h2 {
-  margin: 0px;
-  padding: 12px 12px;
-  background-color: #dddddd;
-}
-section .right-side .widget ul {
-  padding: 0px 12px;
-}
-section .right-side .widget .button {
-  display: table-cell;
-  width: 64px;
-  height: 64px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 76%;
-  -moz-opacity: 0.5;
-  -khtml-opacity: 0.5;
-  -webkit-opacity: 0.5;
-  opacity: 0.5;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);
-  filter: alpha(opacity=50);
-}
-section .right-side .widget .button:hover,
-section .right-side .widget .button:active {
-  -moz-opacity: 1;
-  -khtml-opacity: 1;
-  -webkit-opacity: 1;
-  opacity: 1;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-  filter: alpha(opacity=100);
-}
-section .right-side .widget .twitter {
-  background-image: url(../img/twitter.png);
-}
-section .right-side .widget .facebook {
-  background-image: url(../img/facebook.png);
-}
-section .right-side .widget .linkedin {
-  background-image: url(../img/linkedin.png);
-}
-section .right-side .widget .feed {
-  background-image: url(../img/feed.png);
-}
-section .right-side .widget .slideshare {
-  background-image: url(../img/slideshare.png);
-}
-section .right-side .widget .github {
-  background-image: url(../img/github.png);
-}
-section .right-side .widget .youtube {
-  background-image: url(../img/youtube.png);
-}
-section .right-side .widget .mail {
-  background-image: url(../img/mail.png);
-}
-section .right-side .widget::after {
-  content: '';
-  position: absolute;
-  height: 7px;
-  bottom: -7px;
-  left: 0;
-  background: url(../img/shadow2.png) no-repeat top center;
-  width: 100%;
-}
 section .right-side ul {
   list-style-type: none;
   padding: 0px;
@@ -375,6 +387,7 @@ footer {
 .wrapper {
   width: 860px;
   margin: 0 auto;
+  position: relative;
 }
 /* -------------------------------- */
 
@@ -466,7 +479,7 @@ a.selected {
   text-shadow: 0px 0px 2px rgba(255, 0, 200, 0.3);
   -webkit-text-shadow: 0px 0px 2px rgba(255, 0, 200, 0.3);
   -moz-text-shadow: 0px 0px 2px rgba(255, 0, 200, 0.3);
-  background: url(../img/anchor-bg.png) no-repeat 0px 100%;
+  background-position: 0px 100%;
 }
 b,
 strong {
@@ -513,65 +526,16 @@ img {
   max-width: 100%;
 }
 @media print, screen and (max-width: 960px) {
-  div.wrapper {
-    width: auto;
-    margin: 0;
-  }
-  header,
-  section,
-  footer {
-    float: none;
-    position: static;
-    width: auto;
-  }
-  header {
-    padding-right: 320px;
-  }
-  section {
-    border: 1px solid #e5e5e5;
-    border-width: 1px 0;
-    padding: 20px 0;
-    margin: 0 0 20px;
-  }
-  header a small {
-    display: inline;
-  }
-  header ul {
-    position: absolute;
-    right: 50px;
-    top: 52px;
-  }
+  
 }
 @media print, screen and (max-width: 720px) {
-  body {
-    word-wrap: break-word;
-  }
-  header {
-    padding: 0;
-  }
-  header ul,
-  header p.view {
-    position: static;
-  }
-  pre,
-  code {
-    word-wrap: normal;
-  }
+  
 }
 @media print, screen and (max-width: 480px) {
-  body {
-    padding: 15px;
-  }
-  header ul {
-    display: none;
-  }
+  
 }
 @media print {
-  body {
-    padding: 0.4in;
-    font-size: 12pt;
-    color: #444444;
-  }
+  
 }
 .highlight {
   background: white;
