--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -20,7 +20,7 @@
         </script>
         <script src="/themes/default/js/moment/moment.min.js" type="text/javascript">        
         </script>
-        <script type="text/javascript">moment.lang('pt-BR');</script>
+        <script type="text/javascript">moment.lang('pt-br');</script>
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js">            
             </script>
