Pagina inicial de quadrados e carregado dinamicamente

--- a/_layouts/default.htm
+++ b/_layouts/default.htm
@@ -36,6 +36,9 @@
     </head>
     
     <body>
+        <overlay>            
+            <div></div>
+        </overlay>
         <header>
             <div class="wrapper">
                 <a href="/"><h1 class="signature">Sidney Lima Filho</h1></a>
