--- a/themes/default/css/all.less
+++ b/themes/default/css/all.less
@@ -79,13 +79,27 @@ header, banner, section, footer {
   width:100%;  
 }
 
+overlay{ 
+   display: none; 
+   position: fixed; 
+   width: 100%; 
+   height: 100%;   
+   background-color: rgba(0,0,0,0.88);
+   margin: 0 auto;
+   .opacity(0);
+   z-index: 20;
+   padding-top: 80px;   
+
+   div{ width: 860px; height: 510px; margin:0px auto;}
+}
+
 header {  
    position:absolute;   
    background-color: rgba(255, 255, 255, 0.65);
    border-bottom: 1px solid rgba(255, 255, 255, 0.80);
    /*.gradient(left top, left bottom, 0.95, rgba(255, 255, 255, 0.75), 1,  rgba(255, 255, 255, 0));*/
    padding: 4px 0px;
-   z-index: 1000; /* cause banner position relative stay hover on the header */
+   z-index: 10; /* cause banner position relative stay hover on the header */
 
    .signature {
       .text-shadow(0px, 0px, 0px, rgba(255, 255, 255, 0));
@@ -263,8 +277,35 @@ section {
             padding: 5px;  
             position: absolute;
             width: 250px;
+
+            time{
+               width: 24px;
+               text-align: left;
+               float: left;
+               font-size: 16px;
+               padding-right: 20px;
+               margin-top: -2px;
+            }
+
+            day{ font-size: 26px; height: 24px; display: block; color: orange;}
+            month{ font-size: 16px; color: rgb(252, 211, 137);}
+            year{
+               .rotation(270deg);
+               display: block;
+               position: absolute;
+               top: 15px;
+               font-size: 18px;
+               .opacity(0.3);
+               margin-left: 15px;
+               color: rgb(252, 211, 137);
+            }
+
+            .title{min-height: 44px;}
+            .excerpt{display: none}
          }
       } 
+
+      a:hover .excerpt{display: block}
 
       .twitter table{
          height: 100%;
@@ -431,7 +472,7 @@ a {
    color:@primaryColor; 
    text-decoration:none;
    .transition;
-   .text-shadow(0px, 0px, 2px, rgba(255, 200, 0, 0.7));
+   /*.text-shadow(0px, 0px, 2px, rgba(255, 200, 0, 0.7));*/
    padding-bottom: 2px;
    background: url(../img/anchor-bg.png) no-repeat 0px -2px;
 }
